New modules utils and terms

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,15 +5,23 @@ find_package(DGtal REQUIRED)
 find_package(OpenCV REQUIRED)
 
 link_directories(cmake-build-debug/modules/initialization
+        cmake-build-debug/modules/terms
         ${DIPACUS_LIBS_DIR})
 
 
-add_subdirectory(modules/initialization)
-
 add_executable(LPModel main.cpp)
+
+
+add_subdirectory(modules/utils)
+add_subdirectory(modules/initialization)
+add_subdirectory(modules/terms)
+
+add_dependencies(LPModel utils)
 add_dependencies(LPModel initialization)
+add_dependencies(LPModel terms)
 
 target_link_libraries(LPModel
+        -lterms
         -linitialization
         -lscabolic-core
         -ldipacus-derivates
@@ -25,5 +33,7 @@ target_link_libraries(LPModel
 target_include_directories(LPModel PRIVATE
         ext/include
         modules/initialization/include
+        modules/terms/include
+        modules/utils/include
         ${DGTAL_INCLUDE_DIRS})
 
