Constraints and LPWriter modules

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ find_package(OpenCV REQUIRED)
 
 link_directories(cmake-build-debug/modules/initialization
         cmake-build-debug/modules/terms
+        cmake-build-debug/modules/constraints
+        cmake-build-debug/modules/lpwriter
         ${DIPACUS_LIBS_DIR})
 
 
@@ -15,12 +17,14 @@ add_executable(LPModel main.cpp)
 add_subdirectory(modules/utils)
 add_subdirectory(modules/initialization)
 add_subdirectory(modules/terms)
+add_subdirectory(modules/constraints)
+add_subdirectory(modules/lpwriter)
 
-add_dependencies(LPModel utils)
-add_dependencies(LPModel initialization)
-add_dependencies(LPModel terms)
+add_dependencies(LPModel utils initialization terms constraints lpwriter)
 
 target_link_libraries(LPModel
+        -llpwriter
+        -lconstraints
         -lterms
         -linitialization
         -lscabolic-core
@@ -35,5 +39,7 @@ target_include_directories(LPModel PRIVATE
         modules/initialization/include
         modules/terms/include
         modules/utils/include
+        modules/constraints/include
+        modules/lpwriter/include
         ${DGTAL_INCLUDE_DIRS})
 
