--- a/modules/objective/CMakeLists.txt
+++ b/modules/objective/CMakeLists.txt
@@ -6,10 +6,11 @@ find_package(DGtal REQUIRED)
 add_library(objective SHARED
         src/Objective.cpp)
 
+add_dependencies(objective initialization terms)
+
 target_include_directories(objective PRIVATE
         include
         ${CMAKE_SOURCE_DIR}/modules/initialization/include
-        ${CMAKE_SOURCE_DIR}/modules/utils/include
         ${CMAKE_SOURCE_DIR}/modules/terms/include
         ${DGTAL_INCLUDE_DIRS})
 
