Fix on variable indexing; PythonExporter; data models examples for cvxopt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ link_directories(${LPMODEL_LIBS_DIR}/constraints
         ${LPMODEL_LIBS_DIR}/terms
         ${LPMODEL_LIBS_DIR}/utils
         ${LPMODEL_LIBS_DIR}/solassign
+        ${LPMODEL_LIBS_DIR}/python-exporter
         ${CMAKE_PREFIX_PATH}
         ${BOOST_LIBS_DIR}
         ${DIPACUS_LIBS_DIR})
@@ -22,6 +23,7 @@ add_subdirectory(modules/lpwriter)
 add_subdirectory(modules/solassign)
 add_subdirectory(modules/terms)
 add_subdirectory(modules/utils)
+add_subdirectory(modules/python-exporter)
 
 add_subdirectory(lab/test)
 
@@ -32,7 +34,7 @@ add_subdirectory(app/CApplications/create-ODR-image)
 add_subdirectory(app/CApplications/export-cplex-lp)
 add_subdirectory(app/CApplications/export-cplex-qp)
 add_subdirectory(app/CApplications/export-cvxopt)
-#add_subdirectory(app/CApplications/export-third-order)
+add_subdirectory(app/CApplications/export-third-order)
 
 add_subdirectory(app/CApplications/generate-shapes)
 add_subdirectory(app/CApplications/generate-solution)
